# Django_project

./: .gitignore  Makefile  README.md  pyproject.toml
fixtures/: posts.json
src/project/: db.sqlite3
src/project/blog_app/: admin.py  apps.py  models.py
src/project/blog_app/management/commands/: create_post.py  delete_post.py  print_posts.py  print_published_posts.py  update_post.py
src/project/blog_app/migrations/: 0002_post_category_post_views_count.py
src/project/blog_project/: settings.py
